--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MenuSystem/MainMenuLevel.MainMenuLevel
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/PuzzlePlatforms/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 GlobalDefaultGameMode="/Script/PuzzlePlatforms.PuzzlePlatformsGameMode"
 GameInstanceClass=/Script/PuzzlePlatforms.PuzzlePlatformsGameInstance
 
